tests/paczka1/fuzzy1/67838539.err
Error in line 1: S816 S819 60,1
Error in line 5: kW6VWtCP S816 34,4
Error in line 8: kW6VWtCP S78 82,7
Error in line 11: PECLQwb S78 52,9
Error in line 14: S816 S78 76,1
Error in line 21: S816 S568 95,7
Error in line 10: kW6VWtCP S819 66,9
Error in line 22: S816 S819 7,1
Error in line 33: x6idu S568 59,90
Error in line 32: Bc3eKY S819 49,8
